--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --ignore public",
+    "dev": "node 10.js",
     "1": "nodemon 1",
     "2": "nodemon 2",
     "3": "nodemon 3",
